alterei icones e funcionalidades dos botoes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>Verônica Freitas Santos</title>
-
+	<link rel="icon" type="image/png" href="assets/img/cat-pc.png"/>
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
@@ -36,12 +36,12 @@
 	<!-- Menu -->
 	<nav class="menu" id="theMenu">
 		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">Minimal</a></h1>
+			<h1 class="logo"><a href="index.html#home">Verônica</a></h1>
 			<i class="icon-remove menu-close"></i>
-			<a href="#home" class="smoothScroll">Home</a>
-			<a href="#about" class="smoothScroll">Sobre</a>
-			<a href="https://github.com/verofreitt" class="smoothScroll">Portfólio</a>
-			<a href="#contact" class="smoothScroll">Contato</a>
+			<!--<a href="https://verofreitt.github.io/" class="smoothScroll">Home</a>-->
+			<!--<a href="#about" class="smoothScroll">Sobre</a> -->
+			<a href="https://github.com/verofreitt" class="smoothScroll" target="_blank">Portfólio</a>
+			<!--<a href="#contact" class="smoothScroll">Contato</a>-->
 			
 			<a href="mailto:verofreitt@gmail.com"><i class="icon-envelope"></i></a>
 		</div>
@@ -88,7 +88,7 @@
 					<p>Minha paixão é transformar boas ideias e produtos em sites atraentes.</p>
 					<p>Às vezes, escrevo um blog sobre programação e tendências da web. Também compartilho links e meus pensamentos sobre.</p>
 					<p>Estou disponível para trabalho. Contacte-me agora.</p>
-					<p><a href='https://www.linkedin.com/in/verofreitt/'><button type="button" class="btn btn-warning">Linkedin</button></a></p>
+					<p><a href='https://www.linkedin.com/in/verofreitt/' target="_blank"><button type="button" class="btn btn-warning">Linkedin</button></a></p>
 				</div>								
 			</div>
 		</div><!-- /container -->
