corrigi erros ortograficos

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>Uma criadora de sites em tempo integral residented e São Pualo, Brasil. Adoro criar interfaces bonitas, limpas e fáceis de usar para sites.</p>
+					<p>Uma criadora de sites em tempo integral residented e São Paulo, Brasil. Adoro criar interfaces bonitas, limpas e fáceis de usar para sites.</p>
 					<p>Minha paixão é transformar boas ideias e produtos em sites atraentes.</p>
 					<p>Às vezes, escrevo um blog sobre programação e tendências da web. Também compartilho links e meus pensamentos sobre.</p>
 					<p>Estou disponível para trabalho. Contacte-me agora.</p>
