--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			<h1 class="logo"><a href="index.html#home">Verônica</a></h1>
 			<i class="icon-remove menu-close"></i>
 			<!--<a href="https://verofreitt.github.io/" class="smoothScroll">Home</a>-->
-			<!--<a href="#about" class="smoothScroll">Sobre</a> -->
+			<a href="#about" class="smoothScroll">Sobre</a> 
 			<a href="https://github.com/verofreitt" class="smoothScroll" target="_blank">Portfólio</a>
-			<!--<a href="#contact" class="smoothScroll">Contato</a>-->
+			<a href="#contact" class="smoothScroll">Contato</a>
 			
 			<a href="mailto:verofreitt@gmail.com"><i class="icon-envelope"></i></a>
 		</div>
