--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 				
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>Av. Paulista - Bela Vista<br/>São Paulo, Brasil<br/></p>
+					<p>São Paulo, Brasil<br/></p>
 					<p>verofreitt@gmail.com</p>
 					<p><a href="mailto:verofreitt@gmail.com"><button type="button" class="btn btn-warning">ENTRE EM CONTATO COMIGO AGORA!</button></a></p>
 				</div>
