--- a/index.html
+++ b/index.html
@@ -1,125 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-
-    <title>Verônica Freitas Santos</title>
-	<link rel="icon" type="image/png" href="assets/img/cat-pc.png"/>
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-
-    <script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/modernizr.custom.js"></script>
-	
-
-	
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.js"></script>
-      <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body data-spy="scroll" data-offset="0" data-target="#theMenu">
-		
-	<!-- Menu -->
-	<nav class="menu" id="theMenu">
-		<div class="menu-wrap">
-			<h1 class="logo"><a href="index.html#home">Verônica</a></h1>
-			<i class="icon-remove menu-close"></i>
-			<!--<a href="https://verofreitt.github.io/" class="smoothScroll">Home</a>-->
-			<a href="#about" class="smoothScroll">Sobre</a> 
-			<a href="https://github.com/verofreitt" class="smoothScroll" target="_blank">Portfólio</a>
-			<a href="#contact" class="smoothScroll">Contato</a>
-			
-			<a href="mailto:verofreitt@gmail.com"><i class="icon-envelope"></i></a>
-		</div>
-		
-		<!-- Menu button -->
-		<div id="menuToggle"><i class="icon-reorder"></i></div>
-	</nav>
-
-
-	
-	<!-- ========== HEADER SECTION ========== -->
-	<section id="home" name="home"></section>
-	<div id="headerwrap">
-		<div class="container">
-			<div class="logo">
-				<img src="assets/img/logo.png">
-			</div>
-			<br>
-			<div class="row">
-				<h1>Olá, eu sou a Verônica</h1>
-				<br>
-				<h3>Desenvolvedora Web Full-Stack e amante de gatinhos</h3>
-				<br>
-				<br>
-				<div class="col-lg-6 col-lg-offset-3">
-				</div>
-			</div>
-		</div><!-- /container -->
-	</div><!-- /headerwrap -->
-	
-	
-	
-	<!-- ========== ABOUT SECTION ========== -->
-	<section id="about" name="about"></section>
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<h3>SOBRE MIM</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
-				
-				<!-- INTRO INFORMATIO-->
-				<div class="col-lg-6 col-lg-offset-3">
-					<p>Uma criadora de sites em tempo integral residente e São Paulo, Brasil. Adoro criar interfaces bonitas, limpas e fáceis de usar para sites.</p>
-					<p>Minha paixão é transformar boas ideias e produtos em sites atraentes.</p>
-					<p>Estou disponível para trabalho. Contacte-me agora.</p>
-					<p><a href='https://www.linkedin.com/in/verofreitt/' target="_blank"><button type="button" class="btn btn-warning">Linkedin</button></a></p>
-				</div>								
-			</div>
-		</div><!-- /container -->
-	</div><!-- /f -->
-	
-
-	
-	<!-- ========== CONTACT SECTION ========== -->
-	<section id="contact" name="contact"></section>
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<h3>ENTRE EM CONTATO</h3>
-				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
-				
-				<div class="col-lg-6 col-lg-offset-3">
-					<p>São Paulo, Brasil<br/></p>
-					<p>verofreitt@gmail.com</p>
-					<p><a href="mailto:verofreitt@gmail.com"><button type="button" class="btn btn-warning">ENTRE EM CONTATO COMIGO AGORA!</button></a></p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	<script src="assets/js/classie.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/smoothscroll.js"></script>
-	<script src="assets/js/main.js"></script>
+    <link rel="icon" href="resources/fav.png">
+    <!-- credit: https://www.iconarchive.com/show/love-is-in-the-web-icons-by-succodesign/heart-icon.html#google_vignette for favicon -->
+    <title>Convite pro meu amorzinho</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <section>
+        <div class="video-background">
+            <video autoplay loop muted playsinline>
+                <source src="resources/heart.webm" type="video/webm"><!-- web for transparent background video -->
+                <!-- video credit: https://www.vecteezy.com/video/23346640-red-heart-shape-balloon-flying-up-animation-on-green-screen-background-love-balloon-flying-up-animated-chroma-key-video -->
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div class="container">
+            <div class="image-box">
+                <div class="actual-image">
+                    <img src="resources/cat-heart.gif" alt="gif" class="gif" id="gif">
+                    <!-- gif credit: https://tenor.com/view/heart-love-cat-kawaii-cute-gif-8446829684698946759 -->
+                </div>
+                <div class="text-one">
+                    <p style="font-size: 1.4rem;text-align: center;" id="text">quer sair comigo?❤️😘</p>
+                </div>
+            </div>
+            <div class="yes-no">
+                <button class="yes" id="yes">Sim</button>
+                <button class="no" id="no">Não</button>
+            </div>
+        </div>
+    </section>
+    <script src="js/app.js"></script>
 </body>
 </html>
