fix: Remove unnecessary logo text in navigation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <div class="nav-container">
-          <div class="logo">&lt;/&gt;</div>
+          <div class="logo"></div>
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
