--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <div class="logo">&lt;/&gt;</div>
+                <div class="logo"></div>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html" class="active">Sobre</a></li>
