feat: Update homepage and about page content for clarity and engagement

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="resources/disquet.png">
-    <title>Vero</title>    <link rel="stylesheet" href="css/particles.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap">
-</head>
-<body class="bg-black">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="resources/disquet.png" />
+    <title>Vero</title>
+    <link rel="stylesheet" href="css/particles.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
+    />
+  </head>
+  <body class="bg-black">
     <div id="particles-js"></div>
 
     <div class="count-particles">
-        <span class="js-count-particles"></span>
+      <span class="js-count-particles"></span>
     </div>
 
     <header>
@@ -32,7 +36,9 @@
     <main>
       <section id="home" class="hero">
         <div class="container">
-          <h1 class="cyberpunk-title" data-text="Olá, Mundo!">Verônica Freitas</h1>
+          <h1 class="cyberpunk-title" data-text="Olá, Mundo!">
+            Oi, eu sou a Vero
+          </h1>
           <p class="subtitle">Desenvolvedora de Software</p>
           <div class="terminal">
             <div class="terminal-header">
@@ -41,17 +47,23 @@
               <span class="terminal-button"></span>
             </div>
             <div class="terminal-content">
-             <p><span class="prompt">$</span> whoami</p>
+              <p><span class="prompt">$</span> whoami</p>
               <p><a href="https://github.com/verofreitt">@verofreitt</a></p>
               <p><span class="prompt">$</span> uptime</p>
-              <p>a mais de três anos codando</p>
+              <p>+3 anos de experiência em desenvolvimento de software</p>
               <p><span class="prompt">$</span> cd proj/ && code .</p>
               <p class="typing">abrindo meu próximo projeto...</p>
             </div>
           </div>
+          <div class="social-links">
+            <a href="#" target="_blank">Veja meus projetos</a>
+            <a href="#" target="_blank">Leia o que ando explorando</a
+            >
+          </div>
         </div>
       </section>
-    </main>    <!-- scripts -->
+    </main>
+    <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="js/particles-config.js"></script>
