--- a/sobre.html
+++ b/sobre.html
@@ -52,17 +52,18 @@
                                 <br>
                                 <p>Principais tecnologias:</p>
                                 <ul>
-                                    <li><span class="prompt">»</span> Go, Python, Java, Node.js</li>
-                                    <li><span class="prompt">»</span> PostgreSQL, AWS, Linux, Git, Docker</li>
-                                    <li><span class="prompt">»</span> Design e Arquitetura de Software, API e REST</li>
-                                    <li><span class="prompt">»</span> Microsserviços, DevOps, Monitoramento, Testes e Qualidade</li>
+                                    <li><span class="prompt">»</span>⚙️ Atualmente atuo como desenvolvedora backend em uma fintech, desenvolvendo soluções escaláveis com Go e arquitetura distribuída</li>
+                                    <li><span class="prompt">»</span>⚙️ Backend com Go, PostgreSQL, Redis e APIs REST</li>
+                                    <li><span class="prompt">»</span>🐍 Entusiasta de Python, ciência de dados e automações</li>
+                                    <li><span class="prompt">»</span>🐧 Usuária apaixonada por Linux, terminal e ferramentas open source</li>
+                                    <li><span class="prompt">»</span>🧠 Estudiosa de arquitetura, cultura ágil e engenharia de software</li>
                                 </ul>
                                 <br>
-                                <p><span class="prompt">$</span> cat hobbies.txt</p>
+                                <p><span class="prompt">$</span>cat hobbies.txt</p>
                                 <ul>
-                                    <li><span class="prompt">»</span> Coding</li>
-                                    <li><span class="prompt">»</span> Ler Mangás</li>
-                                    <li><span class="prompt">»</span> Tecnologia</li>
+                                    <li><span class="prompt">»</span>Codar por diversão</li>
+                                    <li><span class="prompt">»</span>Ler mangás e livros de fantasia</li>
+                                    <li><span class="prompt">»</span>Jogar (RPG, estratégia, tabuleiro, indie? Tô dentro)</li>
                                 </ul>
                             </div>
                         </div>
