feat: Update navigation to include logo and enhance layout across multiple pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <header>
       <nav>
         <div class="nav-container">
-          <div class="logo"></div>
+          <a href="index.html" class="logo">
+            <img src="resources/logo.png" alt="vero logo" class="logo-img" />
+          </a>
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
@@ -57,8 +59,7 @@
           </div>
           <div class="social-links">
             <a href="#" target="_blank">Veja meus projetos</a>
-            <a href="#" target="_blank">Leia o que ando explorando</a
-            >
+            <a href="#" target="_blank">Leia o que ando explorando</a>
           </div>
         </div>
       </section>
