--- a/projetos.html
+++ b/projetos.html
@@ -33,7 +33,9 @@
         <nav class="px-4 py-4 max-w-7xl mx-auto">
             <div class="flex items-center justify-between">
                 <div class="text-2xl font-bold hover:text-white transition-colors">
-                    <a href="index.html">&lt;/&gt;</a>
+                    <a href="index.html" class="logo">
+            <img src="resources/logo.png" alt="vero logo" class="logo-img" />
+          </a>
                 </div>
                 
                 <!-- Mobile menu button -->
