--- a/sobre.html
+++ b/sobre.html
@@ -1,80 +1,109 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="resources/disquet.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="resources/disquet.png" />
     <title>Sobre | Dev Profile</title>
-    <link rel="stylesheet" href="css/particles.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap">
-</head>
-<body class="bg-black">
+    <link rel="stylesheet" href="css/particles.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
+    />
+  </head>
+  <body class="bg-black">
     <!-- particles.js container -->
     <div id="particles-js"></div>
 
     <!-- stats - count particles -->
     <div class="count-particles">
-        <span class="js-count-particles"></span>
+      <span class="js-count-particles"></span>
     </div>
-    
+
     <header>
-        <nav>
-            <div class="nav-container">
-                <div class="logo"></div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html" class="active">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </div>
-        </nav>
+      <nav>
+        <div class="nav-container">
+          <a href="index.html" class="logo">
+            <img src="resources/logo.png" alt="vero logo" class="logo-img" />
+          </a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html" class="active">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section class="about">
-            <div class="container">
-                <h1 class="glitch" data-text="Sobre">Sobre</h1>
-                <div class="about-content">
-                    <div class="terminal about-terminal">
-                        <div class="terminal-header">
-                            <span class="terminal-button"></span>
-                            <span class="terminal-button"></span>
-                            <span class="terminal-button"></span>
-                        </div>
-                        <div class="terminal-content">
-                            <p><span class="prompt">$</span> cat sobre.txt</p>
-                            <div class="about-text">
-                                <p>Nome: Verônica Freitas Santos</p>
-                                <p>Cargo: Desenvolvedora de Software Backend</p>
-                                <p>Localização: São Paulo, Brasil</p>
-                                <br>
-                                <p>Principais tecnologias:</p>
-                                <ul>
-                                    <li><span class="prompt">»</span>⚙️ Atualmente atuo como desenvolvedora backend em uma fintech, desenvolvendo soluções escaláveis com Go e arquitetura distribuída</li>
-                                    <li><span class="prompt">»</span>⚙️ Backend com Go, PostgreSQL, Redis e APIs REST</li>
-                                    <li><span class="prompt">»</span>🐍 Entusiasta de Python, ciência de dados e automações</li>
-                                    <li><span class="prompt">»</span>🐧 Usuária apaixonada por Linux, terminal e ferramentas open source</li>
-                                    <li><span class="prompt">»</span>🧠 Estudiosa de arquitetura, cultura ágil e engenharia de software</li>
-                                </ul>
-                                <br>
-                                <p><span class="prompt">$</span>cat hobbies.txt</p>
-                                <ul>
-                                    <li><span class="prompt">»</span>Codar por diversão</li>
-                                    <li><span class="prompt">»</span>Ler mangás e livros de fantasia</li>
-                                    <li><span class="prompt">»</span>Jogar (RPG, estratégia, tabuleiro, indie? Tô dentro)</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="social-links">
-                        <a href="https://github.com/verofreitt" target="_blank">GitHub</a>
-                        <a href="https://linkedin.com/in/verofreitt" target="_blank">LinkedIn</a>
-                    </div>
+      <section class="about">
+        <div class="container">
+          <h1 class="glitch" data-text="Sobre">Sobre</h1>
+          <div class="about-content">
+            <div class="terminal about-terminal">
+              <div class="terminal-header">
+                <span class="terminal-button"></span>
+                <span class="terminal-button"></span>
+                <span class="terminal-button"></span>
+              </div>
+              <div class="terminal-content">
+                <p><span class="prompt">$</span> cat sobre.txt</p>
+                <div class="about-text">
+                  <p>Nome: Verônica Freitas Santos</p>
+                  <p>Cargo: Desenvolvedora de Software Backend</p>
+                  <p>Localização: São Paulo, Brasil</p>
+                  <br />
+                  <p>Principais tecnologias:</p>
+                  <ul>
+                    <li>
+                      <span class="prompt">»</span>Atualmente atuo como
+                      desenvolvedora backend em uma fintech, desenvolvendo
+                      soluções escaláveis com Go e arquitetura distribuída
+                    </li>
+                    <li>
+                      <span class="prompt">»</span>⚙️ Backend com Go,
+                      PostgreSQL, Redis e APIs REST
+                    </li>
+                    <li>
+                      <span class="prompt">»</span>🐍 Entusiasta de Python,
+                      ciência de dados e automações
+                    </li>
+                    <li>
+                      <span class="prompt">»</span>🐧 Usuária apaixonada por
+                      Linux, terminal e ferramentas open source
+                    </li>
+                    <li>
+                      <span class="prompt">»</span>🧠 Estudiosa de arquitetura,
+                      cultura ágil e engenharia de software
+                    </li>
+                  </ul>
+                  <br />
+                  <p><span class="prompt">$</span>cat hobbies.txt</p>
+                  <ul>
+                    <li><span class="prompt">»</span>Codar por diversão</li>
+                    <li>
+                      <span class="prompt">»</span>Ler mangás e livros de
+                      fantasia
+                    </li>
+                    <li>
+                      <span class="prompt">»</span>Jogar (RPG, estratégia,
+                      tabuleiro, indie? Tô dentro)
+                    </li>
+                  </ul>
                 </div>
+              </div>
             </div>
-        </section>
+            <div class="social-links">
+              <a href="https://github.com/verofreitt" target="_blank">GitHub</a>
+              <a href="https://linkedin.com/in/verofreitt" target="_blank"
+                >LinkedIn</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- scripts -->
@@ -83,5 +112,5 @@
     <script src="js/particles-config.js"></script>
     <script src="js/particles-stats.js"></script>
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
