--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,9 @@
     <header>
         <nav>
             <div class="nav-container">
-                <div class="logo">&lt;/&gt;</div>
+                <a href="index.html" class="logo">
+            <img src="resources/logo.png" alt="vero logo" class="logo-img" />
+          </a>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
