update pokedex name

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </span>
           <span>
             <a href="https://github.com/verofreitt/pokedex"
-              ><img src="resources/monster.png" alt="Ícone" style="width:15px; height:15px; vertical-align: middle; margin-right: 10px;">Pokedex</a
+              ><img src="resources/monster.png" alt="Ícone" style="width:15px; height:15px; vertical-align: middle; margin-right: 10px;">Pokédex</a
             >
           </span>
         </div>
